--- a/README
+++ b/README
@@ -2,7 +2,16 @@ NAME
     nopan - download software from source-code repository and install
 
 SYNOPSIS
-      nopan http://svn-or-git-repository
+    % nopan [options] http://svn-or-git-repository
+
+    -i, --install
+    -I, --no-install
+        installs (or does not install) the repository (default: yes)
+
+    -t, --test
+    -T, --no-test
+        runs (or does not run) the test suit (default: depends on the type
+        of the repository)
 
 DESCRIPTION
     Nopan downloads software from a subversion repository or a git
@@ -31,11 +40,4 @@ AUTHOR
 
 LICENSE
     BSD
-
-POD ERRORS
-    Hey! The above document had some coding errors, which are explained
-    below:
-
-    Around line 67:
-        You forgot a '=back' before '=head1'
 
